syntax = "proto3";

package com.wsiz.grpc;

service ConversationService {
    rpc getAllConversations (Empty) returns (ConversationListResponse);
    rpc getConversationById (ConversationIdRequest) returns (ConversationResponse);
    rpc createConversation (CreateConversationRequest) returns (ConversationResponse);
    rpc deleteConversation (ConversationIdRequest) returns (ConversationResponse);
}

message Empty {}

message Conversation {
    int64 id = 1;
    int64 user_id = 2;
    string topic = 3;
    string model = 4;
}

message CreateConversationRequest {
    int64 user_id = 1;
    string topic = 2;
    string model = 3;
}

message ConversationIdRequest {
    int64 id = 1;
}

message ConversationListResponse {
    repeated Conversation conversations = 1;
}

message ConversationResponse {
    bool success = 1;
    string message = 2;
    Conversation conversation = 3;
}
