syntax = "proto3";


service PromptService {
    rpc GetAllPrompts(EmptyRequest) returns (PromptListResponse);
    rpc GetPromptById(PromptIdRequest) returns (PromptResponse);
    rpc CreatePrompt(CreatePromptRequest) returns (PromptResponse);
    rpc DeletePrompt(PromptIdRequest) returns (DeleteResponse);
}

message Prompt {
    int64 id = 1;
    int64 conversationId = 2;
    string question = 3;
    string answer = 4;
    string createdDate = 5;
}

message EmptyRequest {}

message PromptIdRequest {
    int64 id = 1;
}

message PromptResponse {
    bool success = 1;
    string message = 2;
    Prompt prompt = 3;
}

message CreatePromptRequest {
    int64 conversationId = 1;
    string question = 2;
    string answer = 3;
}

message DeleteResponse {
    bool success = 1;
    string message = 2;
}

message PromptListResponse {
    repeated Prompt prompts = 1;
}
